Improve logic for retrieving and creating recent TFT matches
- Update findOrCreateRecentTftMatches to efficiently handle existing and new matches
- Add logic to fetch recent match IDs from the Riot API and save new match details
- Introduce MatchSyncResult class to return match results
- Update related test cases to validate the new logic